--- a/src/index.scss
+++ b/src/index.scss
@@ -3,13 +3,12 @@
 @tailwind utilities;
 
 body {
-    background-color: #0D3140;
+    background-color: #0d3140;
 }
 
 .header {
     padding-top: env(safe-area-inset-top);
 }
-
 
 .footer {
     padding-bottom: env(safe-area-inset-bottom);
