--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: #0D3140;
+}
+
 .header {
     padding-top: env(safe-area-inset-top);
 }
