--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,9 @@
 
 body {
     background-color: #0D3140;
+    @media (prefers-color-scheme: dark) {
+        background-color: #000000;
+    }
 }
 
 .header {
