--- a/src/index.css
+++ b/src/index.css
@@ -10,21 +10,20 @@
 
 @media (prefers-color-scheme: light) {
     html {
-        background-color: #0D3140;
+        background-color: #0d3140;
     }
 }
 
 @layer components {
     .card {
-        @apply bg-card dark:bg-background rounded shadow
+        @apply rounded bg-card shadow dark:bg-background;
     }
 
     .btn-primary {
-        @apply inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-secondary bg-primary dark:bg-primary-dark hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-800 disabled:cursor-not-allowed
+        @apply inline-flex items-center rounded-md border border-transparent bg-primary px-4 py-2 text-sm font-medium text-secondary shadow-sm hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800 dark:bg-primary-dark;
     }
 
     .btn-secondary {
-        @apply inline-flex items-center px-4 py-2 border border-secondary shadow-sm text-sm font-medium rounded-md text-secondary bg-transparent hover:bg-primary focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:bg-gray-800 disabled:border-none disabled:cursor-not-allowed
+        @apply inline-flex items-center rounded-md border border-secondary bg-transparent px-4 py-2 text-sm font-medium text-secondary shadow-sm hover:bg-primary focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:border-none disabled:bg-gray-800;
     }
 }
-
