--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@
     }
 
     .btn-primary {
-        @apply inline-flex items-center rounded-md border border-transparent bg-teal-400 px-4 py-2 text-sm font-medium shadow-2xl text-white hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800 dark:bg-teal-600;
+        @apply inline-flex items-center rounded-3xl border border-transparent bg-teal-400 px-4 py-2 text-sm font-medium shadow-2xl text-white hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800 dark:bg-teal-600;
     }
 
     .btn-secondary {
-        @apply inline-flex items-center rounded-md border border-teal-400 bg-transparent px-4 py-2 text-sm font-medium text-teal-400 shadow-2xl hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:border-none disabled:bg-gray-800;
+        @apply inline-flex items-center rounded-3xl border border-teal-400 bg-transparent px-4 py-2 text-sm font-medium text-teal-400 shadow-2xl hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:border-none disabled:bg-gray-800;
     }
 }
