--- a/src/index.css
+++ b/src/index.css
@@ -10,20 +10,20 @@
 
 @media (prefers-color-scheme: light) {
     html {
-        @apply bg-teal-50 text-teal-950;
+        background-color: #0d3140;
     }
 }
 
 @layer components {
     .card {
-        @apply rounded-2xl bg-white shadow-2xl dark:bg-black dark:border-teal-800 dark:border;
+        @apply rounded bg-card shadow dark:bg-background;
     }
 
     .btn-primary {
-        @apply inline-flex items-center rounded-md border border-transparent bg-teal-400 px-4 py-2 text-sm font-medium shadow-2xl text-white hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800 dark:bg-teal-600;
+        @apply inline-flex items-center rounded-md border border-transparent bg-primary px-4 py-2 text-sm font-medium text-secondary shadow-sm hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800 dark:bg-primary-dark;
     }
 
     .btn-secondary {
-        @apply inline-flex items-center rounded-md border border-teal-400 bg-transparent px-4 py-2 text-sm font-medium text-teal-400 shadow-2xl hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:border-none disabled:bg-gray-800;
+        @apply inline-flex items-center rounded-md border border-secondary bg-transparent px-4 py-2 text-sm font-medium text-secondary shadow-sm hover:bg-primary focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:border-none disabled:bg-gray-800;
     }
 }
