--- a/apps/workout-t3/src/styles/globals.css
+++ b/apps/workout-t3/src/styles/globals.css
@@ -20,10 +20,10 @@
     }
 
     .btn-primary {
-        @apply bg-primary text-secondary hover:bg-primary-dark active:bg-background inline-flex items-center rounded-md border border-transparent px-4 py-2 text-sm font-medium shadow-none focus:outline-none focus:border-none focus:ring-2 focus:ring-primary focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800;
+        @apply bg-primary text-secondary hover:bg-primary-dark active:bg-background focus:ring-primary inline-flex items-center rounded-md border border-transparent px-4 py-2 text-sm font-medium shadow-none focus:border-none focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:cursor-not-allowed disabled:bg-gray-800;
     }
 
     .btn-secondary {
-        @apply border-secondary text-secondary hover:bg-primary active:bg-background inline-flex items-center rounded-md border bg-transparent px-4 py-2 text-sm font-medium shadow-none focus:outline-none focus:border-none focus:ring-2 focus:ring-primary focus:ring-offset-2 disabled:border-none disabled:bg-gray-800;
+        @apply border-secondary text-secondary hover:bg-primary active:bg-background focus:ring-primary inline-flex items-center rounded-md border bg-transparent px-4 py-2 text-sm font-medium shadow-none focus:border-none focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:border-none disabled:bg-gray-800;
     }
 }
